--- a/index.css
+++ b/index.css
@@ -1,5 +1,12 @@
+
+body{
+    margin:0;
+    background-image: linear-gradient(to top, rgba(29, 141, 179, 0.7), rgba(143, 186, 198, 0.1));
+    
+}
 .container{
-    height:500px;
+    height:1350px;
+    padding-top:15px;
     background-image: linear-gradient(to top, rgba(29, 141, 179, 0.7), rgba(143, 186, 198, 0.1));
     /* background-image: linear-gradient(to top, rgba(29, 141, 179, 0.7)); */
 }
@@ -15,6 +22,7 @@
     display:flex;
 }
 nav{
+    padding-left:10px;
     display:flex;
     padding-top:15px;
     color:#fff;
@@ -23,6 +31,8 @@ nav{
 nav li{
     list-style-type:none;
     text-align:center;
+    padding-left:5px;
+    font-size:15px;
 }
 nav li:hover{
     box-shadow: 5px 4px rgba(0,0,0,0.5);
@@ -30,7 +40,8 @@ nav li:hover{
     padding-top:5px;
 }
 nav li .fa-angle-down{
-    width:2%;
+    padding-left:5px;
+    width:0.3rem;
 }
 .home-inner{
     box-shadow: 3px 4px rgba(0,0,0,0.5);
@@ -54,6 +65,100 @@ li{
     padding-right:20px;
     list-style-type:none;
 }
+.red-line{
+    background-color: red;
+    height:2px;
+}
+.slid-in-image{
+    height:240px;
+    margin: 0px 15px 0px 15px;
+    border:1px solid blue;
+    opacity:1;
+    background-color: green;
+    background-image: url("covid19.png");
+    background-size:100%;
+    background-repeat:no-repeat;
+    background-position: bottom;
+
+}
+.container-bottom{
+    background-color: rgb(220, 220, 220, 0.7);
+    height:750px;
+    padding-top:10px;
+    box-shadow: 1.8px 5px rgb(1,1,1,0.2);
+}
+.spotlight{
+    margin: 0px 9px 10px 9px;
+    background-color: #fff;
+    padding:15px 0px 15px 20px;
+}
+.white-space{
+    background-color: #fff;
+    height:15px;
+    margin:10px 0px 10px 0px;
+}
+.bottom-div-container{
+    display:flex;
+    justify-content:space-evenly;
+}
+.div{
+    height:250px;
+    width:23%;
+    background-color:#fff;
+    padding-left:8px;
+}
+h1{
+    font-size:12px;
+    font-weight:200;
+}
+span{
+    font-size:9px;
+    color:blue;
+}
+.div p{
+    font-size: 10px;
+}
+.third-party{
+    height:170px;
+    background-color: #fff;
+    margin-top: 15px;
+    padding:15px 15px 0px 15px;
+}
+.inner{
+    height:155px;
+    background-color: purple;
+    background-image: url("third-party.png");
+    background-size:100%;
+    background-repeat:no-repeat;
+}
+.last-div{
+    height:160px;
+    margin:10px 10px 150px 10px;
+    background-color: #fff;
+    background-image: url("customer.png");
+    background-size:100%;
+    background-repeat:no-repeat;
+}
+.calculator{
+    background-image: url("calculator.png");
+    background-size:70%;
+    background-repeat:no-repeat;
+    background-position: center;
+}
+.tariff{
+    background-image: url("tariff.png");
+    background-size:100%;
+    background-repeat:no-repeat;
+    background-position: bottom;
+}
+.self-service{
+    background-image: url("self-service.png");
+    background-size:70%;
+    background-repeat:no-repeat;
+    background-position: bottom;
+}
+
 .down-drop{
     display:none;
+    background-color: blue;
 }
