--- a/index.css
+++ b/index.css
@@ -74,7 +74,7 @@ li{
     margin: 0px 15px 0px 15px;
     border:1px solid blue;
     opacity:.7;
-    background-image: url("covid-white.png");
+    background-image: url("./covid-white.png");
     background-size:100%;
     background-repeat:no-repeat;
     background-position: bottom;
